edited container style

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,7 @@ body{
 }
 
 /* Стили контейнеров */
-.container{width: 100%; max-width: 1170px; margin: 0 auto; padding: 0;}
+.container{width: 100%; max-width: 755px; margin: 0 auto; padding: 0 28px; box-sizing: initial;}
 
 /* Переменные */
 :root{
