added Checkbox and Radio UI components

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,6 +44,7 @@ body{
   --color-white: #FFFFFF;
   --color-black: #4A4A4A;
   --color-bg: #F3F7FA;
+  --color-bg-hover: #F1FCFF;
   --color-grey: #A0B0B9;
   --color-blue: #2196F3;
   --color-input-border: #9ABBCE;
